Increased heaight of #model-interaction on mobile to stop cut off

--- a/sass/_page-env.scss
+++ b/sass/_page-env.scss
@@ -63,7 +63,7 @@
 
 #model-interaction {
     width: 100%;
-    height: 40px;
+    height: 66px;
     padding: 0;
     position: fixed;
     bottom: 20px;
